# nsys

./: Readme.txt
STEP-1/cuda_matrix_add/: .gitignore  CMakeLists.txt
STEP-1/cuda_matrix_add/include/: matrix_add.h
STEP-1/cuda_matrix_add/src/: main.cu  main_entry.cpp
STEP-1/cuda_matrix_add/tests/: test_matrix.cpp
cuda_graph/: cuda_graph_run.cu  power_chain  power_chain.cu  readme
cuda_gtest_project/: CMakeLists.txt
cuda_gtest_project/include/: vector_ops.h
cuda_gtest_project/src/: main.cu  vector_ops.cu
cuda_gtest_project/tests/: test_vector_add.cpp
matrix_addition/: CMakeLists.txt  main.cu
matrix_addition/tests/: test_main.cpp
